--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "query-string": "^4.2.3",
     "react": "^0.14.8",
     "react-native": "^0.22.2",
-    "react-native-vector-icons": "^2.1.0"
+    "react-native-vector-icons": "^2.1.0",
+    "react-native-video": "^0.9.0"
   }
 }
