--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "query-string": "^4.2.3",
     "react": "^0.14.8",
     "react-native": "^0.22.2",
-    "react-native-button": "^1.7.0",
+    "react-native-button": "^1.7.1",
+    "react-native-sk-countdown": "^1.0.1",
     "react-native-vector-icons": "^2.1.0",
-    "react-native-video": "^0.9.0"
+    "react-native-video": "^0.9.0",
+    "rn-bootstrap-buttons": "^1.0.4"
   }
 }
