--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "react": "^0.14.8",
     "react-native": "^0.22.2",
     "react-native-button": "^1.7.1",
+    "react-native-image-picker": "^0.22.9",
+    "react-native-progress": "^3.1.0",
     "react-native-sk-countdown": "^1.0.1",
     "react-native-vector-icons": "^2.1.0",
     "react-native-video": "^0.9.0",
-    "rn-bootstrap-buttons": "^1.0.4"
+    "rn-bootstrap-buttons": "^1.0.4",
+    "sha1": "^1.1.1"
   }
 }
